Fixed alignment bug, increased video iframe size

--- a/main.css
+++ b/main.css
@@ -282,7 +282,7 @@ a:hover {color: dodgerblue;}
 .column {
   flex: 25%;
   max-width: 25%;
-  padding: 0 4px;
+  /*padding: 0 4px;*/
 }
 
 .column img {
